[metadata]
name = sdss-actorkeys
version = 1.0.0-alpha.0
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS actor keyword datamodel
url = https://github.com/sdss/actorkeys
project_urls =
	Repository = https://github.com/sdss/actorkeys
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software, database
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
	= python
install_requires =
	sdss-opscore>=3.0.0

[options.packages.find]
where =
	python

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = actorkeys
# multi_line_output = false
balanced_wrapping = true
include_trailing_comma = false
# length_sort_stdlib = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
max-line-length = 99
